removed console log and added LazyloadImage component

--- a/client/src/modules/admin/components/Header.css
+++ b/client/src/modules/admin/components/Header.css
@@ -4,7 +4,9 @@
   z-index: 1000; /* Keeps the header above other content */
   background-color: white; /* Keeps the background white */
   border-bottom: 1px solid #ddd; /* Adds a subtle border at the bottom */
-  transition: box-shadow 0.3s ease; /* Smooth transition for shadow */
+  /* transition: box-shadow 0.3s ease; 
+   */
+   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px !important ;
 }
 
 .header.scrolled {
