--- a/client/src/modules/admin/AdminModule.css
+++ b/client/src/modules/admin/AdminModule.css
@@ -46,6 +46,7 @@
   padding-top: 60px; /* Adjust for header */
   z-index: 1000;
   overflow-y: scroll !important;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 /* Mobile Sidebar (Offcanvas) */
