--- a/client/src/modules/admin/components/Sidebar.css
+++ b/client/src/modules/admin/components/Sidebar.css
@@ -5,7 +5,7 @@
     padding: 1rem;
     margin-top: 70px !important;
     padding-top: 0;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px !important;
   }
   
   .sidebar-logo {
