--- a/client/src/pages/Categories/PackageCard/PackageCard.css
+++ b/client/src/pages/Categories/PackageCard/PackageCard.css
@@ -1,18 +1,21 @@
 .package-card-image {
-  height: 200px;
-  background-size: cover;
-  cursor: pointer;
-  background-position: center;
-  position: relative;
   display: flex;
-  align-items: flex-start;
-  padding: 10px;
+  position: relative;
+  width: 100%;
+  height: 200px; /* Set a height for the image */
+  overflow: hidden;
+  background-color: #ccc; /* Optional: Placeholder background */
 }
 
 .badge-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  position: absolute; /* Make sure the badges are positioned relative to the image container */
+  top: 10px; /* Position from the top */
+  left: 10px; /* Position from the left */
+  right: 10px; /* Position from the right */
+  z-index: 1; /* Ensures the badges are above the image */
 }
 
 .advanced-badge,
@@ -27,10 +30,14 @@
 
 .advanced-badge {
   background-color: #ff9800; /* Orange */
+  position: relative; /* Ensure it’s placed within the badge container */
+  z-index: 2; /* Higher z-index to ensure it stays on top of the other badge */
 }
 
 .popular-badge {
   background-color: #4caf50; /* Green */
+  position: relative;
+  z-index: 1; /* Lower z-index for this badge */
 }
 
 .package-card {
@@ -60,7 +67,7 @@
 .package-summary {
   font-size: 14px;
   color: #555;
-  margin-bottom: 10px;  
+  margin-bottom: 10px;
 }
 
 .package-meta {
